--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sadham Hussain's Portfolio</title>
+    <title>SuperTech Genaral Trading</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     
@@ -13,7 +13,7 @@
     <!-- Header site -->
 
     <header>
-    <div class="logo"><span>S</span>uper <span>T</span>ech</div>
+    <div class="logo"><span>S</span>uper <span>T</span>ech <br><span>G</span>enaral <span>T</span>rading</div>
     <ul class="navlist">
         <li><a href="#home" style="--i:1;">Home</a></li>
         <li><a href="#about" style="--i:2;">About</a></li>
@@ -34,7 +34,7 @@
             <div class="change-text">
                 <h3>And It's</h3>
                 <h3>
-                    <span class="word">Supertech Traders</span>
+                    <span class="word">Super Tech Genaral Trading</span>
                 <!--    <span class="word">Frontend Developer</span>
                     <span class="word">Youtuber</span> -->      
                 </h3>
@@ -167,7 +167,7 @@
                                 <span>Languages</span>
                             </div>
                             <p>
-                                <span> English, Malayalam, Hindi</span>
+                                <span> English, Tamil, Malayalam, Hindi</span>
                             </p>
                         </div>
                     </div>
